--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,9 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "csetjmp": "cpp",
+        "shared_mutex": "cpp",
+        "*.in": "cpp"
     }
 }
