fix vm gensidBlockHeader

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,14 +17,14 @@
                 // "GeneralStateTests/stDebug",
                 // "GeneralStateTests",
             //    "GeneralStateTests/stExample",
-                // "BlockchainTests",
+                "BlockchainTests",
                 // "BlockchainTests/TransitionTests/bcEIP158ToByzantium",
                 // "BlockchainTests/TransitionTests",
                 // "BlockchainTests/ValidBlocks",
                 // "BlockchainTests/ValidBlocks/bcBlockGasLimitTest",
                 // "BlockchainTests/ValidBlocks/bcValidBlockTest",
                 // "BlockchainTests/ValidBlocks/vmArithmeticTest",
-                "BlockchainTests/ValidBlocks/VMTests/vmArithmeticTest",
+                // "BlockchainTests/ValidBlocks/VMTests/vmArithmeticTest",
                 
 
                 "--",
@@ -44,8 +44,8 @@
                 // "--lowcpu",
                 // "--travisout",
                 // "--vmtrace",
-                "--verbosity",
-                "6",
+                // "--verbosity",
+                // "6",
                 // ">",
                 // "~/2_debug_error.log",
                 // "2>&1",
