fix account from a94f5374fce5edbc8e2a8697c15331677e6ebf0b to 8eC33b54fde22a01ff0A15AB8FaF88Ff3697D89e

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,9 +15,9 @@
                 // "GeneralStateTests/stPreCompiledContracts",
                 // "GeneralStateTests/stTransactionTest",
                 // "GeneralStateTests/stDebug",
-                // "GeneralStateTests",
+                "GeneralStateTests",
             //    "GeneralStateTests/stExample",
-                "BlockchainTests",
+                // "BlockchainTests",
                 // "BlockchainTests/TransitionTests/bcEIP158ToByzantium",
                 // "BlockchainTests/TransitionTests",
                 // "BlockchainTests/ValidBlocks",
@@ -46,9 +46,9 @@
                 // "--vmtrace",
                 // "--verbosity",
                 // "6",
-                // ">",
-                // "~/2_debug_error.log",
-                // "2>&1",
+                ">",
+                "~/2_debug_error_GeneralStateTests.log",
+                "2>&1",
                 
 
 
