--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,10 +19,10 @@
 
                 // "GeneralStateTests/stDebug",
                 // "GeneralStateTests",
-               "GeneralStateTests/stExample",
-                // "BlockchainTests",
-                // "BlockchainTests/InvalidBlocks/bcForgedTest",
-                // "GeneralStateTests/stExtCodeHash",
+            //    "GeneralStateTests/stExample",
+                "BlockchainTests",
+                //"BlockchainTests/InvalidBlocks/bcForgedTest",
+                //  "GeneralStateTests/stExtCodeHash",
                 // "BlockchainTests/ValidBlocks/VMTests/vmArithmeticTest",
                 // "BlockchainTests/TransitionTests/bcEIP158ToByzantium",
                 // "BlockchainTests/TransitionTests",
@@ -32,6 +32,16 @@
                 // "BlockchainTests/ValidBlocks/bcValidBlockTest",
                 // "BlockchainTests/ValidBlocks/vmArithmeticTest",
                 // "BlockchainTests/ValidBlocks/VMTests/vmArithmeticTest",
+                // "BlockchainTests/InvalidBlocks/bcUncleTest",
+                // "BlockchainTests/InvalidBlocks/bcBlockGasLimitTest",
+                 //"BlockchainTests/ValidBlocks/bcStateTests",
+                 //"BlockchainTests/InvalidBlocks/bcForgedTest",
+                // "BlockchainTests/ValidBlocks/bcBlockGasLimitTest",
+                // "BlockchainTests/InvalidBlocks/bcUncleSpecialTests",
+                //"BlockchainTests/ValidBlocks/bcRandomBlockhashTest",
+                //"BlockchainTests/ValidBlocks/bcTotalDifficultyTest",
+                //"BlockchainTests/ValidBlocks/VMTests/vmSha3Test"
+                
                 
 
                 "--",
@@ -42,11 +52,26 @@
                 "--clients",
                 "default",
                 // "t8ntool",
-                // "--singletest",
-                
-                // "callToNonExistent",
+                //"--singletest",
+                //"debug",
+                //"SimpleTxCosts20000",
+                //"uncleBlockAtBlock3afterBlock4",
+                //"randomStatetest486BC",
+                // "futureUncleTimestamp3",
+                // "ZeroValue_TransactionCALLwithData_ToOneStorageKey_OOGRevert",
+                // "TransactionToItselfNotEnoughFounds",
+                // "TransactionGasHigherThanLimit2p63m1",
+                // "NotEnoughCashContractCreation",
+                // "RefundOverflow",
+                // "bcForkBlockTest",
+                // "SuicidesMixingCoinbase",
+                // "BLOCKHASH_Bounds",
+                // "BadStateRootTxBC"
+
+                // "InChainUncleFather",
+                //  "callToNonExistent",
                 // "debug",
-                // "SimpleTxCosts20000",
+                //"SimpleTxCosts20000",
                 // "BlockGasLimit2p63m1",
                 // "expXY_success",
                 
@@ -61,8 +86,8 @@
                 // "--lowcpu",
                 // "--travisout",
                 // "--vmtrace",
-                // "--verbosity",
-                // "6",
+               // "--verbosity",
+                //"6",
                 // ">",
                 // "~/2_debug_error_balance.log",
                 // "2>&1",
